@@ -10,7 +10,8 @@
 - make master/replica configuration more permanent and a bit safer
   against accidental errors: introduce "--role=auto" option, defaulting
   to determine the role from a previous invocation or the presence of the
-  "--master-url" option if there was no previous invocation.
+  "--master-url" option if there was no previous invocation.  Also verify
+  that a replica talks to the same master UUID as with previous requests.
 
 - provide new /+status json page with master/replica specific information.
 
